log
Thu Apr  7 11:27:25 HSP 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|6
total_score: 0/70
ca30b9a
Thu Apr  7 11:28:25 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7c73cf0
Thu Apr  7 11:30:41 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7553ee4
Thu Apr  7 11:32:21 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8af4a69
Thu Apr  7 11:41:13 HSP 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:28: error: too few arguments to function 'calloc'
     aux->buckets = (Pair**)calloc(capacity*sizeof(Pair*));
                            ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
4276eba
Thu Apr  7 11:41:46 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2159248
Thu Apr  7 12:05:17 HSP 2022: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:16: error: implicit declaration of function 'Hash' [-Werror=implicit-function-declaration]
     long idx = Hash(key, map->capacity);
                ^~~~
hashmap.c:49:40: error: expected ';' before ')' token
         idx = (idx + 1) % map->capacity);
                                        ^
hashmap.c:49:40: error: expected statement before ')' token
cc1.exe: all warnings being treated as errors
Compilation failed
9d597c5
Thu Apr  7 12:05:54 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:40: error: expected ';' before ')' token
         idx = (idx + 1) % map->capacity);
                                        ^
hashmap.c:49:40: error: expected statement before ')' token
Compilation failed
2b46ead
Thu Apr  7 12:06:51 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f14aaf
